--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,20 @@
 version: 2.1
 
 jobs:
-  build:
-    docker:
-      - image: cimg/go:1.21.5
+  build_and_test: # this can be any name you choose
+    executor:
+      name: go/default # Use the default executor from the orb
+      tag: '1.21.5' # Specify a version tag
     steps:
-      - checkout
-      - run:
-          name: Running go tests
-          command: |
-            go mod tidy
-            go mod download
-            go test -coverage ./...
+      - checkout # checkout source code
+      - go/load-cache # Load cached Go modules.
+      - go/mod-download # Run 'go mod download'.
+      - go/save-cache # Save Go modules to cache.
+      - go/test: # Runs 'go test ./...' but includes extensive parameterization for finer tuning.
+          covermode: atomic
+          failfast: true
+          race: true
+      - persist_to_workspace:
+          root: ~/project
+          paths: .
+
