--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,4 +19,7 @@ jobs:
       - persist_to_workspace:
           root: ~/project
           paths: .
-
+workflows:
+  main:
+    jobs:
+      - build_and_test
