--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   go: circleci/go@1.10.0
+  coveralls: coveralls/coveralls@2.2.1
 jobs:
   build_and_test: # this can be any name you choose
     executor:
